# cc-jupyter-service

./: .gitignore  README.md  cc-jupyter-service-config.yml  init_db.sh  pyproject.toml
cc_jupyter_service/: __init__.py  papermill_wrapper.py
cc_jupyter_service/common/: conf.py  execution.py  helper.py  notebook_database.py  red_file_template.py
cc_jupyter_service/common/schema/: configuration.py  request.py
cc_jupyter_service/service/: app.py  auth.py  create_app.py  db.py  schema.sql
cc_jupyter_service/service/static/: style.css  test.html
cc_jupyter_service/service/static/js/: index.js
cc_jupyter_service/service/templates/: hello.html  index.html  login.html
docker_images/base_image/: Dockerfile
docker_images/pytorch_image/: Dockerfile
docker_images/tensorflow_image/: Dockerfile
